2021-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * configure.ac: Remove updates to use recommended forms of AC_INIT
        and AM_INIT_AUTOMAKE.  There were too many annoying side-effects
        to daily development from these changes.  Perhaps they will be
        re-visited if solutions for Autotools regeneration issues are
        found.

2021-01-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/render.c (InverseAffineMatrix): Avoid possible division
        by zero or absurdly extreme scaling in InverseAffineMatrix().
        Fixes oss-fuzz 28293 "Divide-by-zero - InverseAffineMatrix".

2021-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * configure.ac (CONFIG_STATUS_DEPENDENCIES): Regenerate
        configure.ac if ChangeLog or version.sh is updated.

2021-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/pdf.c (WritePDFImage): Converting a TIF to a PDF set the
        page MediaBox to the TIFF dimensions in pixels while the CropBox
        is set in local context dimensions. The latter is correct, the
        former is not.  Set the MediaBox to the proper dimension in local
        context.  Should be the same in this context.  Patch by Hubert
        Figuiere and retrieved from SourceForge patch #64 "Incorrect
        MediaBox in PDF export".

        * magick/pixel_cache.c: Memory cache implementation of pixel cache
        now uses resource limited memory allocator.  It was previously
        resource limited, but by using the resource allocation APIs
        directly.

2021-01-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/tiff.c: Remove unintended double-charging for memory
        resource.  Remove explicit memset where possible.

2021-01-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/gif.c (ReadGIFImage): Fix memory leak of global_colormap
        if realloc of memory for comment fails.  Fixes oss-fuzz 29316