@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210123"
-#define public MagickPackageReleaseDate "snapshot-20210123"
+#define public MagickPackageVersionAddendum ".020210129"
+#define public MagickPackageReleaseDate "snapshot-20210129"
